# cookbook-python

./: .gitignore  README.md  game.py  pyproject.toml
book-fluent-python-2nd/: Chapter05.ipynb  README.md
book-fluent-python-2nd-edition/: section01.ipynb
code-snippet/: task1.py
project-layout/: README.md
test-flight/: test-aync.py  test-toml.py  test_abc.py  test_ast.py  test_enum.py  test_pydantic.py  test_toml_config.toml  test_tree_sitter.py  test_typing.py
test-flight/log/: __init__.py
