[project]
name = "cookbook-python"
version = "0.1.13"
description = "A general-purpose Python cookbook for storing and testing various code snippets and APIs."
authors = [
    {name = "yuli.kamakura",email = "barnett.yuxiang@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "litellm[proxy] (>=1.67.4.post1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
